--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ol": "^9.2.4"
+    "leaflet": "^1.9.4",
+    "ol": "^10.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
